--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,158 @@
 <footer>
 
+    <img src="{{assets}}images/footerwaves@2x.png" alt="">
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <a href="#" class="footer-logo">
+                    <img src="{{assets}}images/logo-white.png" alt="">
+                </a>
+
+
+                <div class="social-links">
+                    <a href="#">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa fa-instagram"></i>
+                    </a>
+
+                    <a href="#">
+                        <i class="fa fa-linkedin"></i>
+                    </a>
+
+                    <a href="#">
+                        <i class="fa fa-youtube"></i>
+                    </a>
+
+                </div>
+                <p>&copy; 2019 Learning champs</p>
+            </div>
+
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-4">
+                        <p class="f-title">
+                            About
+                        </p>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    Company
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Terms of service
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Privacy Policy
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Careers
+                                </a>
+                            </li>
+                        </ul>
+
+                    </div>
+                    <div class="col-md-4">
+                        <p class="f-title">
+                            Acadamics
+                        </p>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    Company
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Terms of service
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Privacy Policy
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Careers
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Company
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Terms of service
+                                </a>
+                            </li>
+                        </ul>
+
+                    </div>
+                    <div class="col-md-4">
+                        <p class="f-title">
+                            News & Events
+                        </p>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    Company
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Terms of service
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Careers
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Company
+                                </a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <p class="f-title">
+                    Newsletter
+                </p>
+
+                <p>
+                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.
+
+                </p>
+                <form action="#">
+                    <input type="email" class="form-control" placeholder="Email address" />
+                    <button type="submit">
+                        Subscribe
+                    </button>
+                </form>
+
+            </div>
+        </div>
+    </div>
+
 
 </footer>
 <script type="text/javascript">
@@ -32,6 +185,15 @@
             }
 
         });
+
+
+        var types = $(".account-type div.type")
+
+        $("div.type").on('click', function (e) {
+            e.preventDefault();
+            types.removeClass("selected");
+            $(this).addClass("selected");
+        })
 
 
         $(".btn-search").on('click', function (e) {
