--- a/public/sass/_header.scss
+++ b/public/sass/_header.scss
@@ -110,3 +110,14 @@ input::-ms-input-placeholder {
   color:#fff;
 }
 }
+
+header.white-header{
+    #logo{
+        img{
+                width: 203px;
+        }
+    }
+    padding: 20px 0px 20px 0px;
+    background:#fff;
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.18);
+}
