--- a/public/sass/_normalize.scss
+++ b/public/sass/_normalize.scss
@@ -431,7 +431,7 @@ h4{  margin:40px 0px 0px 0px;
   }
 
   .champ-zone{
-    padding:80px 0px 80px 0px;
+    padding:80px 0px 120px 0px;
 
     h2,p{
       text-align:center;
@@ -573,9 +573,17 @@ h4{
     padding:80px 0px 80px 0px;
 @include max-width;
 margin:0 auto;
+position:relative;
 width:100%;
 background:url("../images/group-34.jpg") center center no-repeat;
 background-size:cover;
+
+img.game-kid{
+      width: auto;
+    position: absolute;
+    top: -252px;
+    left:0px;
+}
 
 
 h2,p{
@@ -650,7 +658,7 @@ p{
     @include max-width;
     width:100%;
     margin:0 auto;
-
+padding: 80px 0px;
     h2,p{
     text-align:Center;
   }
@@ -992,6 +1000,10 @@ span{
   font-weight: 600;
   font-family:$font;
   padding:0px 0px 0px 40px;
+
+  &:focus{
+    border:thin solid $color-soft-blue;
+  }
     }
 
 
@@ -1125,7 +1137,7 @@ color:#fff;
   }
 
   .page-register{
-padding:180px 0px 0px 0px;
+padding:170px 0px 0px 0px;
 
 h2{
   text-align:Center;
@@ -1232,7 +1244,7 @@ margin-bottom:100px;
 
   .register-success{
     position:relative;
-    padding:240px;
+    padding:170px;
   // background-image: linear-gradient(to top, #0598ff, #ddf2ff);
 
    background-image: linear-gradient(to top, #ffffff, #5bc0ff);
@@ -1256,4 +1268,35 @@ margin-bottom:100px;
        }
      }
 
+  }
+
+  .page-forgot-password{
+
+    h2,p{
+      text-align:center;
+    }
+    p{
+      font-weight:600;
+    }
+    padding:170px 0px 0px 0px;
+    form{
+      padding:40px;
+      border-radius:40px;
+       box-shadow: 5px 10px 30px 0 rgba(119, 126, 133, 0.15);
+
+label{
+  font-size:16px;
+}
+       button{
+         margin:0 auto;
+         display:block;
+         height:63px;
+            box-shadow: 0 3px 0 0 #8b0010;
+  background-image: linear-gradient(255deg, #ffb80a, #f01446);
+  color:#fff;
+  font-size:24px;
+  font-family: $font;
+       }
+
+    }
   }
