--- a/views/index.html
+++ b/views/index.html
@@ -439,6 +439,8 @@ title : Learning Champs | Home page
 
 
 <section class="game-zone">
+
+    <img src="{{assets}}images/kid_2.png" class="game-kid" alt="">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-10">
