--- a/views/reset/index.html
+++ b/views/reset/index.html
@@ -15,7 +15,7 @@ title : Learning Champs | Registration
             <div class="col-md-9">
 
                 <h2>
-                    Forgot Your Password ?
+                    Reset password
                 </h2>
 
                 <p class="r-text-large">
@@ -35,23 +35,20 @@ title : Learning Champs | Registration
                 <form action="#">
 
                     <div class="form-element">
-                        <label for="">Name</label>
-                        <input type="text" class="form-control" value="James William Thompson" placeholder="Name">
+                        <label for="">New Password</label>
+                        <input type="password" class="form-control" value="" placeholder="">
                     </div>
 
                     <div class="form-element">
-                        <label for="">Username</label>
-                        <input type="text" class="form-control" placeholder="Username">
+                        <label for="">Re-enter Password</label>
+                        <input type="password" class="form-control" placeholder="">
                     </div>
 
-                    <div class="form-element">
-                        <label for="">Date of birth</label>
-                        <input type="text" class="form-control" placeholder="Date of birth">
-                    </div>
+
 
                     <div class="form-element">
                         <button type="submit" class="btn btn-default btn-large">
-                            Reset Password
+                            Done
                         </button>
                         <div class="clearfix"></div>
                     </div>
